--- a/flutter_cache_manager/pubspec.yaml
+++ b/flutter_cache_manager/pubspec.yaml
@@ -6,7 +6,7 @@ topics:
   - cache
   - cache-manager
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   clock: ^1.1.0
@@ -17,7 +17,7 @@ dependencies:
   http: ^1.2.1
   path: ^1.9.0
   path_provider: ^2.1.3
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   sqflite: ^2.3.3
   uuid: ^4.4.0
 
